--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@vue/eslint-config-typescript": "^10.0.0",
     "eslint": "^8.10.0",
     "eslint-plugin-vue": "^8.5.0",
+    "normalize.css": "^8.0.1",
     "prettier": "^2.5.1",
     "typescript": "^4.5.4",
     "vite": "^2.8.0",
